# rs-websocket

./: .env  Cargo.toml  api.http
src/: lib.rs  main.rs
src/handler/: socket_handler.rs
src/model/: message.rs  r.rs
ws-cli/: Cargo.toml
ws-cli/src/: main.rs
ws-srv/: Cargo.toml
ws-srv/src/: main.rs
ws-srv/src/handler/: auth.rs  message_handler.rs  mod.rs  socket_handler.rs
ws-srv/src/model/: message.rs  mod.rs
