[package]
name = "rs-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
rand = "0.8.5"

axum = { version = "0.8.1", features = ["multipart", "ws"] }
tokio = {version = "1.43.0", features = ["full"]}
tokio-tungstenite = "0.26.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tracing = "0.1.41"

jsonwebtoken = "9.3.1"
chrono = "0.4.39"
uuid = { version = "1.13.2", features = ["v4"] }
futures = "0.3.31"
