[package]
name = "ws-srv"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"

axum = { version = "0.8.1", features = ["multipart", "ws"] }
tokio = {version = "1.43.0", features = ["full"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tracing = "0.1.41"


uuid = { version = "1.13.2", features = ["v4"] }
futures = "0.3.31"
